; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/cpufreq/extr_cpufreq.c_cpufreq_out_of_sync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/cpufreq/extr_cpufreq.c_cpufreq_out_of_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpufreq_freqs = type { i32, i32, i32 }

@.str = private unnamed_addr constant [86 x i8] c"Warning: CPU frequency out of sync: cpufreq and timing core thinks of %u, is %u kHz.\0A\00", align 1
@CPUFREQ_PRECHANGE = common dso_local global i32 0, align 4
@CPUFREQ_POSTCHANGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @cpufreq_out_of_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cpufreq_out_of_sync(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.cpufreq_freqs, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @dprintk(i8* getelementptr inbounds ([86 x i8], [86 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = getelementptr inbounds %struct.cpufreq_freqs, %struct.cpufreq_freqs* %7, i32 0, i32 0
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* %5, align 4
  %14 = getelementptr inbounds %struct.cpufreq_freqs, %struct.cpufreq_freqs* %7, i32 0, i32 1
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* %6, align 4
  %16 = getelementptr inbounds %struct.cpufreq_freqs, %struct.cpufreq_freqs* %7, i32 0, i32 2
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* @CPUFREQ_PRECHANGE, align 4
  %18 = call i32 @cpufreq_notify_transition(%struct.cpufreq_freqs* %7, i32 %17)
  %19 = load i32, i32* @CPUFREQ_POSTCHANGE, align 4
  %20 = call i32 @cpufreq_notify_transition(%struct.cpufreq_freqs* %7, i32 %19)
  ret void
}

declare dso_local i32 @dprintk(i8*, i32, i32) #1

declare dso_local i32 @cpufreq_notify_transition(%struct.cpufreq_freqs*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
